# GPCK

./: GPCK.sln  README.md
GPCK.Avalonia/: App.axaml  App.axaml.cs  GPCK.Avalonia.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
GPCK.Benchmark/: GPCK.Benchmark.csproj  GPUDirectStorage.cs  Program.cs
GPCK.CLI/: GPCK.CLI.csproj  Program.cs
GPCK.Core/: ArchiveStream.cs  AssetID.cs  AssetPacker.cs  ChunkTable.cs  CodecGDeflate.cs  CodecLZ4.cs  CodecZstd.cs  DDSUtils.cs  GPCK.Core.csproj  GameArchive.cs  NativeBootstrapper.cs  PackageInfo.cs  ResourceManager.cs  VirtualFileSystem.cs  XXHash64.cs
GPCK.Core/Vulkan/: VulkanDecompressor.cs
GPCK.Core/runtimes/win-x64/native/: GDeflate.exp  GDeflate.lib  libzstd.exp  libzstd.lib
GPCK.Wrapper/: CMakeLists.txt  GDeflateShim.cpp
